--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lib"
   ],
   "dependencies": {
+    "email-validator": "^2.0.4",
     "styled-components": "^5.3.0"
   },
   "peerDependencies": {
