--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "outDir": "lib",
     "declaration": true,
     "sourceMap": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "noEmit": true
   },
   "include": [
     "src"
