--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lib"
   ],
   "dependencies": {
+    "classnames": "^2.3.1",
     "email-validator": "^2.0.4",
+    "node-sass": "^6.0.1",
     "styled-components": "^5.3.0"
   },
   "peerDependencies": {
