--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "storybook-lib",
+  "name": "jahj-storybook-lib",
   "version": "0.1.0",
   "private": false,
   "license": "MIT",
+  "typings": "lib/index.d.ts",
+  "homepage": "https://www.linkedin.com/in/jorgehdzjara/",
+  "repository": {
+    "url": "https://github.com/JAndresHJ/react-lib-storybook",
+    "type": "git"
+  },
+  "release": {
+    "branches": [
+      "master"
+    ]
+  },
   "main": "lib/index.js",
   "directories": {
     "lib": "lib"
   },
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "dependencies": {
     "classnames": "^2.3.1",
@@ -19,7 +31,8 @@
   "peerDependencies": {
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "build": "tsc --build \"./tsconfig.json\"",
